fix top alignment

--- a/app/assets/stylesheets/components/_nav_bar.scss
+++ b/app/assets/stylesheets/components/_nav_bar.scss
@@ -1,6 +1,6 @@
 header.nav-bar {
   position: fixed;
-  right: 14px;
+  right: 7px;
   width: 100vw;
   height: 46px;
   font-size: 18px;
